Adds delete functionality

--- a/src/components/SearchBox/SearchBox.module.css
+++ b/src/components/SearchBox/SearchBox.module.css
@@ -13,6 +13,8 @@
   outline: none;
   border: 1px solid black;
   border-radius: 4px;
+  box-sizing: border-box;
+  padding-left: 10px;
 }
 
 .inputField:focus {
